--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "react-sunburst-d3-v4": "^0.1.6"
+    "react-sunburst-d3-v4": "^0.1.6",
+    "sunburst-chart": "^1.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
